--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
             </section>
         </div>
         <div class="row">
-            <h5 class="text-danger mt-4 text-center mb-4">Виды карточек</h5>
+            <h5 class="text-danger mt-4 text-center">Виды карточек</h5>
             <div class="col-lg-6 mt-4">
                 <div class="card text-center">
                     <div class="card-body">
